[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bug-triage-env"
version = "0.1.0"
description = "AI Bug Triage & Debugging Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.23,<1.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.25,<1.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env", "env.*"]